--- a/Core/NewProjectDialog.ui
+++ b/Core/NewProjectDialog.ui
@@ -31,31 +31,31 @@
     </widget>
    </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="label_project_name">
+    <widget class="QLabel" name="labelProjectName">
      <property name="text">
       <string>Project name</string>
      </property>
     </widget>
    </item>
    <item row="4" column="1">
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="location"/>
    </item>
    <item row="4" column="2">
-    <widget class="QPushButton" name="browse_location">
+    <widget class="QPushButton" name="browseLocation">
      <property name="text">
       <string>Browse..</string>
      </property>
     </widget>
    </item>
    <item row="4" column="0">
-    <widget class="QLabel" name="label_location">
+    <widget class="QLabel" name="labelLocation">
      <property name="text">
       <string>Location</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1" colspan="2">
-    <widget class="QLineEdit" name="project_name"/>
+    <widget class="QLineEdit" name="projectName"/>
    </item>
   </layout>
  </widget>
