--- a/CodeEditor/ui/Setting/SettingFileAssociationSection.ui
+++ b/CodeEditor/ui/Setting/SettingFileAssociationSection.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>442</width>
-    <height>256</height>
+    <width>526</width>
+    <height>326</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -20,23 +20,7 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QListWidget" name="extensionsList"/>
-   </item>
-   <item row="1" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="1">
+   <item row="0" column="2">
     <layout class="QVBoxLayout" name="extensionsButtonsLayout">
      <item>
       <widget class="QPushButton" name="add">
@@ -73,6 +57,20 @@
       </spacer>
      </item>
     </layout>
+   </item>
+   <item row="0" column="1">
+    <widget class="QTreeWidget" name="extensionsTree">
+     <column>
+      <property name="text">
+       <string>Extension</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Editor</string>
+      </property>
+     </column>
+    </widget>
    </item>
   </layout>
  </widget>
