--- a/Plugins/Project/ui/NewProjectDialog.ui
+++ b/Plugins/Project/ui/NewProjectDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>New PHP project</string>
+   <string>New project</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
